--- a/Makistan_Climate_page.html
+++ b/Makistan_Climate_page.html
@@ -12,7 +12,7 @@
     <img src="Assets/Makeistan.jpeg" alt="Makeistan Logo" />
     <nav>
       <ul class="navbar">
-        <li><a href="Makistan_home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Makeistan_AI_page.html">Robotics & AI Lab</a></li>
         <li><a href="Makistan_Climate_page.html">Climate Innovation Lab</a></li>
         <li><a href="Makistan_Energy_page.html">Green Energy Lab</a></li>
