--- a/Makeistan_AI_page.html
+++ b/Makeistan_AI_page.html
@@ -14,6 +14,7 @@
     <nav>
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
+        <li><a href="Makeistan_About.html">About</a></li>
         <li><a href="Makeistan_AI_page.html">Robotics & AI Lab</a></li>
         <li><a href="Makistan_Climate_page.html">Climate Innovation Lab</a></li>
         <li><a href="Makistan_Energy_page.html">Green Energy Lab</a></li>
